copper finished, silicon/silica added

--- a/appendix.tex
+++ b/appendix.tex
@@ -2,9 +2,9 @@
 %\include{anhanga}
 %\newpage
 %\addcontentsline{toc}{chapter}{B. Danksagung}
-\thispagestyle{empty}
-\chapter{Danksagung}
-\newpage
+%% \thispagestyle{empty}
+%% \chapter{Danksagung}
+%% \newpage
 %\chapter{}
 \null\vfil
 \begin{center}
