--- a/goldpvd.tex
+++ b/goldpvd.tex
@@ -69,7 +69,7 @@ Fehler- und Abbruchsquoten bei den LAMMPS-Berechnungen lagen mit \SI{0.25}{\perc
 
 \subsubsection{Strukturierte Substrate}
 
-Neben dem glatten Substrat wurden auch Abscheidungen auf strukturierten Substraten (Abbildung \ref{fig:goldsubstrate}) mit den gleichbleibenden Prozessbedingungen simuliert.
+Neben dem glatten Substrat wurden auch Abscheidungen auf strukturierten Substraten (Abbildung \ref{fig:golddepositions}) mit den gleichbleibenden Prozessbedingungen simuliert.
 Als Substrate wurden \SI{20}{\angstrom} hohe Stufen und Spitzen mit Neigungen von jeweils \SI{15}{\degree}, \SI{20}{\degree}, \SI{30}{\degree}, \SI{45}{\degree}, \SI{60}{\degree} und \SI{90}{\degree} präpariert.
 Auf vorherige Relaxierung der Substrate wurde aufgrund der Prozessstabilität sowie der relaxierenden Eigenschaften der MD-Ereignisse verzichtet.
 Zusätzlich wurden Lamellen und Gitter mit einer Strukturbreite von \SI{16}{\angstrom} zur Untersuchung eventueller Prozessartefakte präpariert.
@@ -158,7 +158,7 @@ Hier zeigt sich ein künstliches \todo{besserer Begriff}Artefakt der Simulations
 Eine mögliche Lösung wäre die explizite Parametrisierung per Delaunay-Triangulation, wie sie in Abschnitt \ref{datadelaunay} diskutiert wurde.
 In realen Systemen werden entstehende Überhänge und Hohlräume der untersuchten Größenordnungen vermutlich durch Oberflächendiffusionen wegrelaxiert.
 
-\begin{figure}[h]
+\begin{figure}[bth]
   \captionsetup[subfigure]{singlelinecheck=false}
   \def\subfigwidth{0.49\textwidth}
 
