copper plots updated

--- a/copperpvd.tex
+++ b/copperpvd.tex
@@ -94,12 +94,12 @@ Es ist also zu vermuten, dass perfekte Gitterkonfigurationen nicht robust gegen√
   \end{subfigure}
   \hfill
   \begin{subfigure}[t]{\subfigwidth}
-    \includegraphics[width=\textwidth]{missing}
+    \includegraphics[width=\textwidth]{Cu_thickness}
     \subcaption{Zeitliche Entwicklung der Schichtdicke}
     \label{fig:copperparsivald-b}
   \end{subfigure}
   \begin{subfigure}[t]{\subfigwidth}
-    \includegraphics[width=\textwidth]{missing}
+    \includegraphics[width=\textwidth]{Cu_roughness}
     \subcaption{Zeitliche Entwicklung der Rauheit}
     \label{fig:copperparsivald-c}
   \end{subfigure}
