copper data analyzed

--- a/siliconpvd.tex
+++ b/siliconpvd.tex
@@ -42,7 +42,7 @@ Die Ergebnisse dieser Betrachtungen wurden in Tabelle \ref{tab:siliconpreresults
 
 \begin{table}[h]
   \caption[Ergebnisse der Silizium-Potential-Untersuchungen]{Zusammenfassung Ergebnisse der Untersuchung der Potenialuntersuchung für Silizium-Systeme. Detailliertere Ergebnisse finden sich im \todo[inline]{Anhang}}
-  \label{tab:siliconpotentials}
+  \label{tab:siliconpreresults}
   \rowcolors{0}{white}{lightgray}
   \begin{tabularx}{\textwidth}{|lCCCCCCCC|}
     \hline
@@ -63,7 +63,7 @@ Die Ergebnisse dieser Betrachtungen wurden in Tabelle \ref{tab:siliconpreresults
   \todo[inline]{Gruende und Daten -> Anhang}
 \end{table}
 
-Schluss.
-
 \footnotetext[1]{PVD: a-\ce{Si}-PVD mit Parsivald}
 \footnotetext[2]{PVD: a-\ce{SiO2}-CVD mit Parsivald}
+
+Schluss.
