--- a/contents.tex
+++ b/contents.tex
@@ -35,7 +35,7 @@
 %%======================================================================
 %%      Algorithmenverzeichnis
 %%======================================================================
-%\renewcommand{\listalgorithmname}{Algorithmenverzeichnis}
+\renewcommand{\listalgorithmname}{Algorithmenverzeichnis}
 \addcontentsline{toc}{chapter}{Algorithmenverzeichnis}
 \listofalgorithms
 
