--- a/thermalresults.tex
+++ b/thermalresults.tex
@@ -1,2 +1,7 @@
-\section{Thermische Eigenschaften}
+\section{Thermodynamische Eigenschaften}
 
+Parsivald modelliert thermodynamische Eigenschaften implizit über die Molekulardynamik sowie explizit über die Precursor-Geschwindigkeiten als Resultat der Maxwell-Boltzmann-Verteilung bei gegebener Temperatur.
+
+... inhalt? ...
+
+\subsection{MD-Simulationen}
